--- a/2.html
+++ b/2.html
@@ -10,7 +10,10 @@
     <h1>sytep to push update into git</h1>
     <P> 
         <ul> <li> git init </li>
-        <li></li></ul>
+        <li> git add .</li>
+        <li> git commit -m "text to display"</li>
+        <li>git push</li>
+    </ul>
     </P>
 </body>
 </html>
