--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sytep to push update into git</h1>
+    <h1>step to push update into git</h1>
     <P> 
         <ul> <li> git init </li>
         <li> git add .</li>
