--- a/2.html
+++ b/2.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Steps to push update into git</h1>
     <P> 
-        <ul> <li> git init </li>
+        <ul> <li> git init ( optional) </li>
         <li> git add .</li>
         <li> git commit -m "text to display"</li>
         <li>git push</li>
